<resources>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="version">Version</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
</resources>