<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:exb_color="@color/imperial_red" />
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:exb_color="@color/imperial_red" />
    <item
        android:id="@+id/nav_playlist"
        android:title="@string/playlist"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        app:exb_color="@color/imperial_red" />
    <item
        android:id="@+id/nav_favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:exb_color="@color/imperial_red" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:exb_color="@color/imperial_red" />
</menu>